# ccomixmanager

./: ComixManager.sql  ComixManager_20230216_045854.sql  ComixManager_20230216_062019.sql  FrameArticolo.c  FrameCategoria.c  FrameClienti.c  FrameCollana.c  FrameConnessione.c  FrameDipendente.c  FrameEditore.c  FrameFornitore.c  FrameNegozio.c  FrameOggetto.c  README.md  articolo.c  articolo.h  categoria.c  categoria.h  ccomixmanager.desktop  cliente.c  cliente.h  collana.c  collana.h  comixmanager_20230216_040945.sql  dipendente.c  dipendente.h  editore.c  editore.h  editoreDAO.c  fornitore.c  fornitore.h  fornitoreDAO.c  helper.c  helper.h  logo.xpm  main.c  meson.build  negozio.c  negozio.h  negozioDAO.c  (+2 more)
debian/: README.Debian  README.source  ccomixmanager.postinst.debhelper  ccomixmanager.postrm.debhelper  ccomixmanager.substvars  changelog  control  copyright  debhelper-build-stamp  files  postinst.ex  postrm.ex  preinst.ex  prerm.ex  watch.ex
snap/: snapcraft.yaml
